samples/_failures_safe/1761344407_afe29a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_606ca067.c: In function ‘main’:
./samples/SAFE/__tmp_606ca067.c:206:16: error: missing terminating " character
  206 |         printf("Token %d: Type=%s
      |                ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_606ca067.c:206:9: error: expected expression at end of input
  206 |         printf("Token %d: Type=%s
      |         ^~~~~~
./samples/SAFE/__tmp_606ca067.c:206:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_606ca067.c:206:9: error: expected declaration or statement at end of input
